docs-archive/versioned_docs/version-1.7.0/docs/managed-datahub/release-notes/v_0_3_16.md
---
description: >-
  DataHub Cloud v0.3.16 release notes from January 2026 covering structured
  property proposals, ingestion UI fixes, and bulk edit alignment.
title: v0.3.16
slug: /managed-datahub/release-notes/v_0_3_16
custom_edit_url: >-
  https://github.com/datahub-project/datahub/blob/master/docs/managed-datahub/release-notes/v_0_3_16.md
---

# v0.3.16

:::info

This contains detailed release notes. Read the highlights in this [blog post](https://datahub.com/blog/datahub-cloud-v0-3-16/).

:::

#### Release Availability Date

19-Jan-2026

#### Recommended Versions

- **CLI/SDK**: 1.3.1.7.post1
- **Remote Executor**: v0.3.16-acryl (recommended), v0.3.15-acryl, v0.3.14.1-acryl
- **On-Prem Versions**:
  - **Helm**: 1.5.173
  - **API Gateway**: 0.6.0
  - **Actions**: 0.0.3

## Release Changelog

### v0.3.16.7-acryl

Patch release on top of **v0.3.16.6-acryl**.

#### Release Availability Date

8-Apr-2026

#### Bug fixes

- **Remote executor**: Bundled **acryl-executor** is **0.3.5.1** (was 0.3.5). Capability checks for ingestion features no longer use a fixed subprocess timeout, so slow cold starts are less likely to fail those checks.

### v0.3.16.6-acryl

#### Release Availability Date

7-Apr-2026

#### Security

- OIDC: Stop exposing the client secret via GraphQL (use `hasClientSecret` only) and fix SSO save errors by omitting read-only fields from the update mutation (#8887).

#### Product

- **Structured property proposals** (#8103): Clearer structured-property flows on assets and on dataset schema columns—direct edit/upsert where you have full write access, versus proposal flows that require approval. Separate actions for proposing new structured property values vs proposing updates to existing values (update proposals cannot add new properties). Same pattern at the column level for schema fields.
- **Ingestion UI**: Fixed a cache bug when creating a new ingestion source (#8533).
- **Bulk editing**: Fixed alignment for selected items in bulk edit.
- **Entity profile**: Other (non-editable) fields now use display names consistently with editable structured properties (#8352).

#### Platform

- **CI / images**: Fixed `copy_re` workflow variant lists so publish jobs match variants present on this branch; partial sync and version bumps aligned with acyl-main (#8844).

### v0.3.16.5-acryl

- **On-Prem Versions**:
  - **Helm**: 1.6.20

#### Platform

- ES/OpenSearch: set `dynamic: true` on object-type mappings to avoid reindex loops (e.g. ownerTypes).
- Index build: configurable slow-op timeout, count retry, and optional createIndex retry; long timeout used for count/refresh/reindex/listTasks/etc.
- Search engine detection: failure reasons included in thrown IOException; null-safe version checks.
- ES8 reindex uses `waitForCompletion(false)` for async reindex.
- Retention: per-(urn,aspect) DELETE for better index use; version history only when policy allows; retention ingestion moved to datahub-upgrade non-blocking step.

#### Ingestion

- metadata-ingestion: setuptools &lt;82, urllib3 1.26.x, Snowflake deps updated (connector ≥4, cryptography≥46), added gcs-slim/abs-slim.
- `avro_schema_to_mce_fields` accepts optional `validate_names` for avro parse.
- Integrations Snowflake: `private_key` supports both SecretStr and str.
- Pinned `cryptography>=46.0.5` in ingestion for CVE-2026-26007.

#### Product

- “Entities per platform” chart excludes query index so query entities don’t inflate counts.
- OIDC settings: defaults in DEFAULT_SETTINGS; inputs show empty + placeholder so saved vs default is clear.
- Search bar keeps query and suggestions after selecting an entity (`onSearch`, no onClear).
- Document editor: theme-aware toolbar; preventDefault on toolbar so dropdowns don’t steal focus; click-outside with `.ant-dropdown` ignored.
- Confluence recipe: config paths updated to `spaces.allow/deny` and `pages.allow/deny`.
- Slack/Teams chat excludes USER- and MUTATION-tagged tools.
- Dark/light theme tokens extended (e.g. textOnFill*, textOnSurface*, red400/500) for toolbar/editor.

### v0.3.16.4-acryl

- Various small UX fixes (data product proposals, users in queries table, fetching forms data in the task center)
- Fixes for server-side Semantic Search Configs for bedrock in GraphQL
- Support for injecting custom headers when forwarding LLM calls Open AI Proxy
- Cleanup extraneous logs related to OpenSearch rescoring

### v0.3.16.3-acryl

- Skip sibling search: Added ability to skip sibling search on GraphQL queries for improved performance
- FastMCP upgrade: Upgraded to the latest version of FastMCP with improved MCP server capabilities
- (Performance) Forms query optimization: Request forms for entity profiles in a separate query for better performance
- (Bugfix) OpenAPI scroll fix: Fixed mutation of default search flags for scrolling with slice
- (Performance) GraphQL recursion: Added relationship traversal context to prevent infinite recursion
- (Bugfix) Asset download filters: Fixed asset download filters functionality
- (Bigfix) Lineage graph restricted entities: Fixed restricted entities handling in lineage graph
- (Bugfix) Task center workflows: Display workflow name correctly for EntityProfile-only workflows
- Remote executor: Bump acryl-executor to have OS environment pass through
- Build constraints: Constrain setuptools<82 in acryl-cloud and datahub-executor build isolation
- (Private Beta) Two-stage search ranking: Enhanced search relevance with improved ranking algorithm
- (Private Beta) Semantic search for documents: Extended semantic search capabilities to document entities
- (#16036) Restore Gzip Compression
- (#16114) Prevent Graphql Infinite Recursion
- (#16128) System Update: OpenSearch ReIndex Configuration

### v0.3.16.2-acryl

- CLI/SDK pin: Pinned acryl-datahub to 1.3.1.7 for stability
- Search filters tooltip: Fixed tooltip display on more filters dropdown
- Task center performance: Stop fetching schema metadata for action requests on task center for improved performance

### v0.3.16.1-acryl

- (Private Beta) AI Chat Modes: Added support for AI Chat Modes in Ask DataHub
- (Private Beta) Chat feedback: Added support for user feedback in chat interface
- (Bugfix) Lineage card images: Adding a fallback icon for failed images on Lineage cards
- (Bugfix) More filters UX: Improved More filters user experience

### v0.3.16-acryl

New Features:

<!-- John -->

- **Ask DataHub (Public Beta)** - Ask DataHub chat assistant is now in Public Beta! Available in DataHub, Slack, & Microsoft Teams. This means it's available for all customers to use. If you do NOT want Ask DataHub enabled for your instance, please reach out to your DataHub customer representative. Learn more about Ask DataHub [here](/docs/features/feature-guides/ask-datahub).

- **Context Documents (Public Beta)** - Context Documents are now available in Public Beta! Create documents on DataHub - Runbooks, FAQs, Business Definitions, Decision Logs - that can be used to help Ask DataHub (and humans) answer a broader set of questions. Link documents to related data assets & docs, and safely publish documents when you're ready for Ask DataHub and the rest of your team to see them.

- **Editing Tools in Ask DataHub & MCP Server**: Ask DataHub & DataHub MCP Server now include tool enabling you make changes to your data assets. Easily update descriptions, add + remove tags, terms, domains, structured properties, and owners using natural language.

- **AI Features: Support for Gemini on GCP** - For customers hosted on Google Cloud Platform, DataHub AI features including Ask DataHub are now available for use through Gemini. Reach out to your DataHub Customer Representative to enable.

- **Ask DataHub for Ingestion:** Streamline your ingestion setup and troubleshooting with AI-powered assistance. Get step-by-step configuration guidance, instant error interpretation, performance tuning recommendations, and advanced configuration help—all through conversational chat embedded directly in the ingestion UI.
- **Ingestion Configuration Redesign:** Refreshed UI/UX for a more intuitive ingestion setup experience.

- Observe Python SDK: Introducing complete support for managing all native assertion types, this includes column value, smart sql, and schema assertions.
- On-demand assertions with parameters: Use template parameters within SQL statements of assertions, and trigger them on-demand with dynamic parameters subsituted in at runtime!

<!-- Adrian -->

- Freshness Assertion Tuning: You can now adjust your smart freshness assertions; labelling historical anomalies, adding exclusion windows, and tuning sensitivity to improve future freshness anomaly detection
- Observe Query Attribution: Query tags have been added to warehouse queries issued by Observe, to aid in cost attribution. Snowflake [query tags](https://select.dev/posts/snowflake-query-tags) and BigQuery [job labels](https://docs.cloud.google.com/bigquery/docs/adding-labels#job-label) are used for those respective platforms, and standard SQL comments are used for RedShift and Databricks.
- Observe Data Consistency: Additional validation and checks added for Assertion and Monitor entities

- **Azure Data Factory Connector** - New first-class connector for ingesting metadata from Azure Data Factory pipelines, enabling native tracking of Azure-based data orchestration workflows.

- **Snowflake Semantic Views Support** - Added support for ingesting Snowflake Semantic Views, expanding metadata coverage for Snowflake environments and enabling better discovery of semantic layer assets.

- **Enhanced Oracle Connector** - Oracle connector now supports materialized views, stored procedures, and usage statistics, providing comprehensive metadata extraction for Oracle databases.

- **Kafka Connect Intelligent Lineage** - Kafka Connect connector can now automatically infer lineage from DataHub, significantly reducing manual lineage configuration for Kafka-based data pipelines.

- **Hive Metastore Upstream Lineage** - Added lineage capabilities to the Hive Metastore connector, enabling tracking of data flow through Hive tables and improved data lineage visibility.

- **S3 File Sink Support** - Restored ability to write ingestion output directly to S3, enabling S3-based metadata storage, backup workflows, and integration with S3-native data pipelines.

- **OAuth Support for Kafka Integrations** - Added OAuth callback support for Kafka producers and sinks, providing enterprise-grade authentication for Kafka-based ingestion workflows.

- **PowerBI Amazon Athena Lineage** - PowerBI connector now supports lineage extraction for Amazon Athena data sources, enabling cross-platform lineage tracking from PowerBI dashboards to AWS data.

- **Redshift Query Tagging** - Redshift queries issued by DataHub ingestion now include query tags for improved cost attribution and query tracking.

- **Hive Thrift Connection with Kerberos** - New Thrift connection mode for Hive Metastore with Kerberos authentication support, enabling secure connections in enterprise Hadoop environments.

- **Context Base Python APIs** - New Python SDK APIs with comprehensive documentation for working with context documents, enabling programmatic management of DataHub context.

- **Tags to Structured Properties Transformer** - New transformer to convert tags to structured properties, making it easier to migrate from tags to the more powerful structured properties model.

- **Ingestion Performance Optimization** - Significant performance improvement for high-volume ingestion through compiled regex patterns in the filtering hot path, reducing CPU usage during pattern matching operations.

Improvements & Fixes:

- **Enhanced SQL Parsing** - Multiple improvements to SQL parsing including: MSSQL statement splitting when expressions end with parentheses, support for 3+ part table names in Dremio and other sources, and consistent table-column lineage extraction in Snowflake.

- **Critical Compatibility Updates** - Tactical fix for Confluent Kafka 2.13 breaking changes, Metabase 0.57+ compatibility with legacy-mbql parameter support, and Docker Compose 5.x compatibility for quickstart environments.

- **Security & Stability Fixes** - Fixed SQLAlchemy password masking encoding issues, improved Fivetran REST API error handling and reporting, resolved multiple Grafana connector issues (ownership ingestion, uniqueness bugs, text panel failures), and fixed MSSQL stored procedure lineage extraction.

- **Connector Reliability Improvements** - Fixed Redshift lineage extraction ignoring disabled flags, resolved BigQuery temp table case normalization, corrected Unity Catalog schema pattern handling, added proper HTTP status checking for CSV enricher remote file fetches, and fixed Fivetran quoted identifier handling for database/schema names.

- **SDK Enhancements** - Added support for parametrized assertion runs in Python SDK, fixed DataJob environment defaults when using flow_urn, and improved structured properties with version field support.

Fixes:

- Snowflake - introduces support for private key auth
- Data health dashboard link sharing on the 'By Assertion' tab was broken. This is now patched.
- Slack alerts for legacy assertion failures now correctly route to the assertion.
- In some instances with corrupted legacy assertions, other non-corrupted assertions stopped showing on dataset pages due to failures of an MCP Upgrade Step. This is now resolved.
- Fix view authorization issue with home page domains module where module would fail to load if a user couldn't view one of the domains
- Fixes an error page that can occasionally happen after clicking the executor name in your ingestion list that takes you to the list of executors
- Fixed some assertions not showing up in the dataset quality tab
- Externally reported assertion run events were not triggering notifications. This is now fixed.
- Pagination of inactive metadata-tests is fixed, ensuring processing of all metadata tests in batch mode.
- Various fixes for ElasticSearch setup in system-update flow
- Fix for impact analysis partial results
- CI stability fixes

## Known Issues

- System upgrades may hang on v0.3.16.3 due to a scroll pagination issue. Upgrade to Helm chart `1.6.12` or later, or set `ELASTICSEARCH_QUERY_RESCORE_ENABLED=false` on GMS and restart.
